--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="add">Add</string>
     <string name="overview">Overview</string>
     <string name="transactions">Transactions</string>
+    <string name="label_budget_remaining">Budget Remaining</string>
 </resources>
