--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="overview">Overview</string>
     <string name="transactions">Transactions</string>
     <string name="label_budget_remaining">Budget Remaining</string>
+    <string name="notifications">Notifications</string>
+    <string name="settings">Settings</string>
 </resources>
