--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
 
 
     <!--  Intro Strings -->
-    <string name="intro_text">It appears this is your first time using BudgetBuddy!\n
+    <string name="intro_text">It appears this is your first time using BudgetBuddy!\n\n
         Please set your monthly budget below</string>
     <string name="welcome_text">Welcome!</string>
 </resources>
