--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="label_transaction_history">Transaction History</string>
     <string name="label_add_category">Add Category</string>
     <string name="label_choose_colour">Choose Colour</string>
+    <string name="label_no_transactions">No transactions added!</string>
+    <string name="label_go_to_add">Go to the \"Add\" screen to add a transaction</string>
 
     <!-- Radio Buttons -->
     <string name="rb_incoming">Incoming</string>
