--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,12 @@
     <string name="placeholder_amount">+/£0.00</string>
     <string name="placeholder_monthly_budget">(Monthly Budget: £1000.00)</string>
 
+    <!-- Alerts -->
+    <string name="alert_title">Reset App</string>
+    <string name="alert_message">Are you sure you want to reset BudgetBuddy? This will reset your budget and delete all transactions and custom categories</string>
+    <string name="alert_reset">Reset</string>
+    <string name="alert_cancel">Cancel</string>
+
     <!--  Intro Strings -->
     <string name="intro_text">It appears this is your first time using BudgetBuddy!\n\n
         Please set your monthly budget below</string>
